BUGFIX:Added fixed height to cms-logo when left hand nav is collapsed - Trac ticket 7665.

--- a/admin/css/screen.css
+++ b/admin/css/screen.css
@@ -783,6 +783,7 @@ li.class-ErrorPage > a .jstree-pageicon { background-position: 0 -112px; }
 .cms-menu.collapsed .cms-menu-list li { width: 100%; float: left; }
 .cms-menu.collapsed .cms-menu-list li span.text { display: none; }
 .cms-menu.collapsed .cms-menu-list li ul { display: none; }
+.cms-menu.collapsed .cms-logo { height: 24px; }
 .cms-menu.collapsed.cms-panel .cms-panel-content { display: block; }
 .cms-menu.collapsed .cms-login-status { display: none; }
 
