--- a/admin/scss/_menu.scss
+++ b/admin/scss/_menu.scss
@@ -128,6 +128,9 @@
 				}
 			}
 		}
+		.cms-logo {
+			height:24px;
+		}
 
 		&.cms-panel .cms-panel-content {
 			display: block; // override panel defaults
